# Embodied_AI_Learning

./: .gitignore  README.md
lerobot/robot_learning_tutorial/: README.md
lerobot/robot_learning_tutorial/ch01/: 01_datasets.ipynb  01_datasets.py  02_record_data.ipynb
lerobot_sim/: README.md  main.py  pyproject.toml
lerobot_sim/assets/mujoco/: pickplace_scene.xml
lerobot_sim/assets/mujoco/robots/franka_emika_panda/: panda_nohand.xml
lerobot_sim/configs/: train_pi0.yaml  train_smolvla.yaml
lerobot_sim/models/smolvla_frank/wandb/: latest-run
lerobot_sim/models/smolvla_frank/wandb/run-20251109_161702-mwygidwi/: run-mwygidwi.wandb
lerobot_sim/models/smolvla_frank/wandb/run-20251109_161702-mwygidwi/files/: config.yaml  requirements.txt  wandb-metadata.json
lerobot_sim/src/lerobot_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lerobot_sim/src/lerobot_sim/environments/: __init__.py  base.py  pickplace_env.py
lerobot_sim/src/lerobot_sim/environments/mujoco/: mujoco_parser.py
lerobot_sim/src/lerobot_sim/environments/utils/: ik.py  transforms.py  utils.py
lerobot_sim/src/lerobot_sim/scripts/: data_collection.py  deploy.py  training.py  visualized_data.py
llm/miniGPT/: miniGPT.py
rl/GRPO/: GRPO_DDP.py
simulation/mujoco/tutorial/: ik.py  main.py
simulation/mujoco/tutorial/model/universal_robots_ur5e/: scene.xml
