[project]
name = "lerobot-sim"
version = "0.1.0"
description = "A Lerobot algorithm experiment project using Mujoco as the simulation environment."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.11.0",
    "datasets==3.4.1",
    "huggingface-hub>=0.36.0",
    "lerobot",
    "matplotlib>=3.10.7",
    "mujoco==3.1.6",
    "num2words>=0.5.14",
    "pyautogui>=0.9.54",
    "safetensors>=0.4.3",
    "scipy>=1.15.3",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.50.3",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot.git", rev = "10b7b3532543b4adfb65760f02a49b4c537afde7" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
data_collection = "lerobot_sim.scripts.data_collection:main"
visualize = "lerobot_sim.scripts.visualized_data:main"
training = "lerobot_sim.scripts.training:train"
deploy = "lerobot_sim.scripts.deploy:main"
